@@ -39,7 +39,9 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: channels.c,v 1.233 2006/02/07 01:42:00 stevesk Exp $");
+RCSID("$OpenBSD: channels.c,v 1.234 2006/02/10 00:27:13 stevesk Exp $");
+
+#include <sys/ioctl.h>
 
 #include <termios.h>
 
