@@ -24,8 +24,9 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: misc.c,v 1.44 2006/02/08 12:32:49 stevesk Exp $");
- 
+RCSID("$OpenBSD: misc.c,v 1.45 2006/02/10 00:27:13 stevesk Exp $");
+
+#include <sys/ioctl.h>
 #include <netinet/tcp.h>
 #ifdef HAVE_PATHS_H
 # include <paths.h>
