@@ -42,7 +42,9 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: sshd.c,v 1.319 2006/02/08 12:15:27 stevesk Exp $");
+RCSID("$OpenBSD: sshd.c,v 1.320 2006/02/10 00:27:13 stevesk Exp $");
+
+#include <sys/ioctl.h>
 
 #include <paths.h>
 
